index.css
body {
    justify-content: center;
    align-items: center;
}

.background {
    position: relative;
    background-image: url('Images/bar_background.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    width: 1280px;
    height: 880px;
    margin: auto;
    justify-content: center;
    align-items: center;

}

.recipieWindow {
    
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(52, 96, 97, 0.516);
    height: 100%;
    width: 100%;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    z-index: 200;
    text-align: center;
}

.recipieSheet {
    background-color: rgb(251, 250, 194);
    height: 90%;
    width: 50%;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    left: 0;
    right: 0;
    text-align: center;
    border: 5px solid rgb(0, 221, 255);
    border-radius: 10px;
}

.recipieSheetText {
    display: grid;
    gap: 20px;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    padding: 10px;
    grid-template-columns: repeat(2, 1fr);

}

.drinkDisplay {

    cursor: pointer;
    height: 300px;
    width: 100%;
    align-items: last baseline;
    justify-content: flex-end;
    position: relative;
    background-color: rgba(9, 186, 186, 0.508);
}

.bar_shelf {
    justify-content: center;
    align-items: center;
    position: inherit;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0, auto;
    width: 100%;


}

.shelf_row {
    display: flex;
    justify-content: center;
    gap: 0px;
    align-items: center;
    background-color: rgba(48, 17, 10, 0.401);
    height: 150px;
    width: 80%;

}

.shelf_container {
    cursor: pointer;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    background-color: rgba(34, 8, 1, 0.508);
    height: 100%;
    width: 100vw;

}

.menu_container {
    cursor: pointer;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    background-color: rgba(34, 8, 1, 0.508);
    height: 100%;
    width: 100vw;
    margin-top: 50px;

}

.counter {

    display: flex;
    gap: 20px;
    justify-content: center;
    align-items: center;
    background-color: rgba(180, 180, 180, 0);
    margin: 50px;

    height: auto;

}

.shaker {
    background-color: rgb(48, 55, 79);
    height: 200px;
    width: 100px;
    margin-bottom: 50px;

}

.recipieList {
    background-color: rgb(216, 189, 174);
    padding: 25px;
    height: 200px;
    width: 100px;
    margin-bottom: 50px;
}

.menu {
    margin-top: 50px;
    height: 250px;
    width: 250px;
    align-items: last baseline;
    justify-content: flex-end;
    position: absolute;
}

.glass {
    background-color: rgb(203, 218, 220);
    height: 200px;
    width: 100px;
}

.item {
    pointer-events: none;
    height: 100px;
    width: 100px;
    align-items: last baseline;
    justify-content: flex-end;
    position: absolute;
}

.image {
    display: block;
    margin: 0 auto;
    height: auto;
    width: 100%;
    height: auto;
    position: absolute;
    bottom: 0;
    z-index: 20;


}

.heldItem {
    z-index: 100;
}

.spacer {
    height: 150px;
    width: 100%;
}

.spacer2 {
    height: 80px;
    width: 100%;
}


/*alc ids*/

#vodka {
    background-color: rgb(255, 255, 255);
}

#tequilla {
    background-color: rgb(244, 248, 217);

}

#rum {
    background-color: rgb(161, 121, 90);

}

#gin {
    background-color: rgb(75, 203, 220);

}

#whiskey {
    background-color: rgb(140, 9, 9);

}

/*mixers*/
#grenadine {
    background-color: rgb(255, 0, 85);

}


#bitters {
    background-color: rgb(122, 67, 12);



}

#creamLiqueur {
    background-color: rgb(255, 229, 182);

}

#kahula {
    background-color: rgb(73, 24, 3);

}

#tripleSec {
    background-color: rgb(255, 89, 0);

}

/*Juice ids*/
#tonic {
    background-color: rgba(27, 141, 255, 0.125);

}

#lemonJuice {
    background-color: rgb(250, 255, 115);

}

#limeJuice {
    background-color: rgb(78, 255, 107);

}


#orangeJuice {
    background-color: rgb(255, 128, 0);


}

#pineappleJuice {
    background-color: rgb(255, 225, 0);

}

#syrup {
    background-color: rgb(255, 255, 255);

}

/*garnish ids*/

#cherries {
    background-color: rgb(141, 3, 3);


}

#lime {
    background-color: rgb(47, 214, 28);

}

#salt {
    background-color: rgb(207, 209, 202);

}

#sugar {
    background-color: rgb(231, 244, 241);

}

#mint {
    background-color: rgb(17, 139, 86);

}

#orangePeel {
    background-color: rgb(255, 102, 0);

}




#following {
    box-shadow: 0 0 20px black;
}

.label {
    margin: auto;
    justify-content: center;
    display: none;
    position: absolute;
    background: white;
    border: 2px solid black;
    border-radius: 20px;
    padding: 12px;
    width: 180px;
    z-index: 3;
    pointer-events: none;
}

